# aiogram_max

./: README.md  README.rst  pyproject.toml
aiogram_max/: __init__.py  __meta__.py  exceptions.py
aiogram_max/client/: bot.py  context_controller.py  default.py  telegram.py
aiogram_max/dispatcher/: dispatcher.py  flags.py  router.py
aiogram_max/enums/: __init__.py  chat_status.py  chat_type.py  intent.py  message_link_type.py  text_format.py
aiogram_max/filters/: base.py  callback_data.py  chat_member_updated.py  command.py  exception.py  logic.py  magic_data.py  state.py
aiogram_max/fsm/: context.py  middleware.py  scene.py  state.py
aiogram_max/handlers/: base.py  callback_query.py  chat_member.py  chosen_inline_result.py  error.py  inline_query.py  message.py  poll.py  pre_checkout_query.py  shipping_query.py
aiogram_max/methods/: __init__.py  answer_callback_query.py  base.py  get_business_connection.py  get_me.py  get_updates.py  send_message.py  set_my_commands.py  unpin_all_general_forum_topic_messages.py
aiogram_max/types/: __init__.py  attachment.py  attachment_request.py  base.py  bot_command.py  bot_description.py  bot_short_description.py  callback_query.py  callback_query_response.py  chat.py  chat_boost_source.py  chat_full_info.py  chat_join_request.py  chat_member_updated.py  chat_shared.py  error_event.py  forum_topic_edited.py  general_forum_topic_hidden.py  general_forum_topic_unhidden.py  image.py  inaccessible_message.py  inline_keyboard_button.py  inline_keyboard_markup.py  inline_query.py  input_file.py  input_profile_photo_animated.py  input_profile_photo_static.py  input_story_content_photo.py  input_story_content_video.py  keyboard.py  keyboard_button.py  (+29 more)
examples/: context_addition_from_filter.py  echo_bot.py  echo_bot_webhook.py  echo_bot_webhook_ssl.py  error_handling.py  finite_state_machine.py  message_callback.py  multibot.py  own_filter.py  quiz_scene.py  scene.py  set_my_commands.py  specify_updates.py  stars_invoice.py  without_dispatcher.py
(+38 files in other folders)
